test/typeerrors/Heuristics/UnifierGuards.hs
test 
  | False = "hello" 
  | True  = 13
